# kernelcal

./: .gitignore  CONTRIBUTING.md  Dockerfile.landauer  HYDROSHED_KERNELCAL_CONTEXT.md  LICENSE  NAVIGATION.md  README.md  VELOCITY_CONTROL.md  add_wall_power.py  artifact_filter.py  badlands_kernelcal.py  bf_geotiff_export.py  bf_kernelcal_demo.py  bf_kernelcal_plots.py  bf_spatial_overlay.py  bf_vegetation_segment.py  biosig_paper_figures.py  bishop_kernelcal.py  bishop_mode_decomposition.py  bishop_rocks_graph_explorer.py  bishop_trait_analysis.py  conftest.py  deepgis_maxcal_integration.md  docker-compose.landauer.yml  drone_dem_betti_adaptive_experiment.py  jezero_kernelcal.py  jezero_rook_kernelcal.py  lunar_kernelcal.py  lunar_viz.py  make_phasespace_figure.py  make_robbins_phasespace_figure.py  merge_landauer_results.sh  osm_street_kernelcal.py  osm_urban_kernelcal.py  plot_bishop_rocks.py  pyproject.toml  q40_sleep_eeg.py  requirements.landauer.txt  requirements.txt  rivgraph_graph_analysis.py  (+11 more)
.github/workflows/: python-tests.yml
deepgis_kernelcal/: __init__.py
docs/: distinction-game-design.md
docs/change-requests/: 2026-04-26-integration-spine-and-bookkeeping.md  INDEX.md  pr-a-scope.md
docs/results/: 2026-04-26-planned-vs-organic-dH.md
examples/: README.md
examples/attention/: README.md  add_wall_power.py  biosig_paper_figures.py
examples/bishop/: README.md  bishop_kernelcal.py  bishop_mode_decomposition.py  bishop_rocks_graph_explorer.py  bishop_trait_analysis.py
examples/compression/: README.md  run_graph_codec_demo.py  run_terrain_compression.py  synthetic_planetary_mesh_experiment.py
examples/controller/: README.md  drone_dem_betti_adaptive_experiment.py  make_phasespace_figure.py  run_a2_sweep.py
examples/fires/: README.md  bf_geotiff_export.py  bf_kernelcal_demo.py  bf_kernelcal_plots.py  bf_spatial_overlay.py  bf_vegetation_segment.py
examples/lunar/: README.md  lunar_kernelcal.py  lunar_viz.py
examples/navigation/: README.md  demo_velocity_control.py  toy_navigation_2d.py
examples/rivgraph/: README.md  q14_brahmaputra_temporal_sim.py  rivgraph_graph_analysis.py
examples/robbins/: README.md  make_robbins_phasespace_figure.py  robbins_kernelcal.py  robbins_paper_figs.py
examples/urban/: README.md  osm_street_kernelcal.py  osm_urban_kernelcal.py
experiments/: planned_vs_organic_dH.py
experiments/configs/: sonoran_fringe.yaml  synthetic_fringe.yaml  synthetic_grid.yaml  tempe_grid.yaml
experiments/output/: planned_vs_organic_dH.json
figures/fluid/: kernel_fluid_20node_summary.txt  kernel_fluid_20node_timeseries.csv
figures/spectral/: exp7_cross_topology_summary.csv  procedural_examples_summary.json  river_channel_original_verify_summary.json  river_channel_verify_summary.json
geotiffs/: bf_4band_timestamps.tif  bf_4band_timestamps.tif.aux.xml  bf_all_timestamps_rgba.tif  bf_aug_2020_mask.tif  bf_dec_2020_mask.tif  bf_feb_2021_mask.tif  bf_oct_2020_mask.tif  bf_temporal_count.tif  rock_eccentricity.tif  rock_major_axis.tif  rock_mask.tif
kernelcal/: __init__.py
kernelcal/assembly/: __init__.py  complexity.py
kernelcal/attention/: __init__.py  device.py  energy.py  experiment.py  grokking.py  kernel.py  landauer.py  landauer_plots.py  perturbation.py  tracker.py  training.py  training_plots.py
kernelcal/bandits/: README.md  __init__.py  agents.py  experiment.py  field.py  kernels.py  network.py  run_server.py
kernelcal/bio/: __init__.py  sleep_eeg.py
kernelcal/blender/: __init__.py  q10_pipeline.py  run_q10_experiment.sh  terrain_gen.py  twin_receiver.py
kernelcal/control/: __init__.py  analyzer.py  care.py
kernelcal/core/: __init__.py
kernelcal/distinction_game/: __init__.py  city_priors.py  collapse.py  factor_graph.py  fit_pipeline.py  kernel_mix.py  q_s.py  q_s_fit.py  region.py  scene_graph.py  spectral.py  taxonomy.py
kernelcal/fluid/: __init__.py  dynamics.py  experiments.py  multicomponent.py  sparse.py
kernelcal/geo3d/: __init__.py  bounds.py  decoder.py  detail_synthesis.py  graph3d.py  hodge.py  large_mesh.py  local_frame.py  mesh.py  spectral_codec.py  temporal.py  topology.py
ros2_ws/src/bloom_maxcal_sim/: README.md  demo_bloom_maxcal.py  package.xml  setup.cfg  setup.py
ros2_ws/src/bloom_maxcal_sim/bloom_maxcal_sim/: __init__.py  bloom_field.py  maxcal_bloom_follower.py  rover_model.py
ros2_ws/src/bloom_maxcal_sim/bloom_maxcal_sim/nodes/: __init__.py  bloom_field_node.py  digital_twin_node.py  maxcal_controller_node.py  rover_sim_node.py  visualizer_node.py
ros2_ws/src/bloom_maxcal_sim/config/: default.yaml
ros2_ws/src/bloom_maxcal_sim/launch/: bloom_sim.launch.py
tests/: demo_velocity_control.py  test_a2_counterexample.py  test_appearance_pipeline.py  test_artifact_filter.py  test_attention_core.py  test_bishop_rocks_explorer.py  test_city_priors.py  test_control_care.py  test_core_api.py  test_decoder.py  test_deepgis_kernelcal_compat.py  test_detail_synthesis.py  test_distinction_game_pr3.py  test_distinction_game_scaffold.py  test_factor_graph.py  test_fluid_sparse_vectorization.py  test_frames.py  test_geo3d_compression.py  test_graph_explorer.py  test_integrations_and_entry_points.py  test_multicomponent_fluid.py  test_p3_endogeneity_sampling.py  test_p4_oversmoothing_spectral_entropy.py  test_planned_vs_organic.py  test_representational_thermodynamics_particle_accelerator.py  test_scene_graph_collapse.py  test_semantic_pipeline.py  test_shared_primitives.py  test_sigma_m_p8.py  test_sleep_eeg_q40.py  test_spectral_claims.py  test_superquadric.py  test_terrain.py  test_urban_bbox.py  test_urban_road_knn.py  test_urban_to_fluid_adapter.py  test_video_depth_stream.py  toy_navigation_2d.py
(+72 files in other folders)
