[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelcal"
version = "0.9.2"
description = "Kernel dynamics under Maximum Caliber — variational tools for representational change, thermodynamic bounds, and adaptive sampling."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jnaneshwar Das", email = "jnaneshwar.das@gmail.com" }
]
keywords = [
    "maximum caliber", "kernel methods", "RKHS", "thermodynamics",
    "neural tangent kernel", "adaptive sampling", "information theory"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
torch        = ["torch>=2.0"]
transformers = ["torch>=2.0", "transformers>=4.35", "accelerate>=0.24"]
geo3d        = ["trimesh>=4.0", "pycollada>=0.9"]
dev          = ["pytest>=7.0", "torch>=2.0", "transformers>=4.35", "matplotlib>=3.7", "pillow>=10.0"]

[project.urls]
Homepage              = "https://github.com/darknight-007/kernelcal"
Paper                 = "https://arxiv.org/abs/2603.27880"
SpectralKernelDynamics = "https://arxiv.org/abs/2604.09745"
DeepGIS               = "https://github.com/Earth-Innovation-Hub/deepgis-xr"

[tool.setuptools.packages.find]
include = ["kernelcal*", "deepgis_kernelcal*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
